feat: Implement bulk availability API for lawyer consultations