@@ -1,6 +1,10 @@
 package com.wachichaw.Schedule.Service;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -10,6 +14,8 @@ import org.springframework.stereotype.Service;
 import com.wachichaw.Schedule.Entity.ScheduleEntity;
 import com.wachichaw.Schedule.Entity.AppointmentStatus;
 import com.wachichaw.Schedule.Repo.ScheduleRepository;
+import com.wachichaw.Schedule.DTO.AvailableSlotResponseDTO;
+import com.wachichaw.Schedule.DTO.TimeSlotDTO;
 import com.wachichaw.Lawyer.Entity.LawyerEntity;
 import com.wachichaw.Lawyer.Repo.LawyerRepo;
 import com.wachichaw.Client.Entity.ClientEntity;
@@ -160,14 +166,100 @@ public class ScheduleService {
     }
 
     /**
-     * Get available time slots for a lawyer on a specific date
-     * This is a simple implementation - can be enhanced with business hours, break times, etc.
+     * Get all available time slots for a lawyer on a specific date
+     * This replaces multiple individual availability checks with a single operation
+     * Optimized version that reduces database queries from 9 to 1
      */
-    public List<LocalDateTime> getAvailableTimeSlots(LawyerEntity lawyer, LocalDateTime date, int durationMinutes) {
-        // This would typically be more complex, considering business hours, lunch breaks, etc.
-        // For now, returning empty list - can be implemented based on business requirements
-        return List.of();
-    }      /**
+    public AvailableSlotResponseDTO getAvailableSlots(int lawyerId, LocalDate date) {
+        // Validate lawyer exists
+        LawyerEntity lawyer = lawyerRepo.findById(lawyerId)
+                .orElseThrow(() -> new RuntimeException("Lawyer not found with ID: " + lawyerId));
+        
+        // Define standard business hours (9 AM to 5 PM, 1-hour slots)
+        List<String> standardTimeSlots = Arrays.asList(
+            "09:00 AM", "10:00 AM", "11:00 AM", "12:00 PM",
+            "01:00 PM", "02:00 PM", "03:00 PM", "04:00 PM", "05:00 PM"
+        );
+        
+        // Get start and end of the day
+        LocalDateTime dayStart = date.atTime(9, 0);  // 9 AM
+        LocalDateTime dayEnd = date.atTime(18, 0);   // 6 PM
+        
+        // Single database query for all conflicting schedules for the entire day
+        List<ScheduleEntity> existingSchedules = scheduleRepository
+                .findByLawyerAndBookingStartTimeBetween(lawyer, dayStart, dayEnd);
+        
+        // Calculate available and booked slots
+        List<TimeSlotDTO> availableSlots = new ArrayList<>();
+        List<TimeSlotDTO> bookedSlots = new ArrayList<>();
+        
+        for (String timeSlot : standardTimeSlots) {
+            LocalDateTime slotStart = parseTimeSlot(date, timeSlot);
+            LocalDateTime slotEnd = slotStart.plusHours(1);
+            
+            // Check if this time slot conflicts with any existing schedule
+            boolean isAvailable = existingSchedules.stream()
+                    .noneMatch(schedule ->
+                        schedule.getBookingStartTime().isBefore(slotEnd) &&
+                        schedule.getBookingEndTime().isAfter(slotStart)
+                    );
+            
+            String nextTimeSlot = getNextHour(timeSlot);
+            TimeSlotDTO slot = new TimeSlotDTO(timeSlot, nextTimeSlot, isAvailable);
+            
+            if (isAvailable) {
+                availableSlots.add(slot);
+            } else {
+                slot.setUnavailableReason("Booked");
+                bookedSlots.add(slot);
+            }
+        }
+        
+        return new AvailableSlotResponseDTO(date.toString(), availableSlots, bookedSlots, "9:00 AM - 6:00 PM");
+    }
+
+    /**
+     * Helper method to parse time slot string to LocalDateTime
+     */
+    private LocalDateTime parseTimeSlot(LocalDate date, String timeSlot) {
+        // Parse time slot like "09:00 AM" to LocalDateTime
+        String[] parts = timeSlot.split(" ");
+        String timePart = parts[0];
+        String amPm = parts[1];
+        
+        String[] hourMin = timePart.split(":");
+        int hour = Integer.parseInt(hourMin[0]);
+        int minute = Integer.parseInt(hourMin[1]);
+        
+        // Convert to 24-hour format
+        if (amPm.equals("PM") && hour != 12) {
+            hour += 12;
+        } else if (amPm.equals("AM") && hour == 12) {
+            hour = 0;
+        }
+        
+        return date.atTime(hour, minute);
+    }
+
+    /**
+     * Helper method to get the next hour time slot
+     */
+    private String getNextHour(String timeSlot) {
+        switch (timeSlot) {
+            case "09:00 AM": return "10:00 AM";
+            case "10:00 AM": return "11:00 AM";
+            case "11:00 AM": return "12:00 PM";
+            case "12:00 PM": return "01:00 PM";
+            case "01:00 PM": return "02:00 PM";
+            case "02:00 PM": return "03:00 PM";
+            case "03:00 PM": return "04:00 PM";
+            case "04:00 PM": return "05:00 PM";
+            case "05:00 PM": return "06:00 PM";
+            default: return timeSlot;
+        }
+    }
+
+    /**
      * Cancel an appointment
      */
     public ScheduleEntity cancelAppointment(Integer scheduleId) {
